hw_05/manifest/service-with-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: default
  labels:
    app: ms-users
    owner: artem_voropay
    description: otus_hw5
spec:
  selector:
    app: ms-users
  type: NodePort
  ports:
  - name: api
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: metrics
    port: 9093
    targetPort: 8000
